--- a/src/components/tiptap.module.css
+++ b/src/components/tiptap.module.css
@@ -20,7 +20,9 @@
 }
 
 .tiptap-root :global(.ProseMirror) img {
+  display: block;
   width: 100%;
+  max-width: 100%;
   height: auto;
 }
 
